# MDP_Inverted_Pendulum_CP

./: .gitignore
arduino/: arduino_controller.ino
backend/: pyproject.toml  run.py
backend/src/pendulum_cp/: main.py
backend/src/pendulum_cp/controllers/: session.py
backend/src/pendulum_cp/models/: schemas.py
backend/src/pendulum_cp/sources/: base.py  engine_manager.py  matlab_script.py  simulation.py  simulink.py  simulink_runner.py
backend/tests/: test_base_source.py  test_main.py  test_matlab_script_source.py  test_models.py  test_session.py  test_simulation_source.py  test_simulink_source.py
frontend/pendulum-cp-ui/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/pendulum-cp-ui/src/: index.html  styles.scss
frontend/pendulum-cp-ui/src/app/: app.spec.ts  app.ts
frontend/pendulum-cp-ui/src/app/components/control-panel/: control-panel.html  control-panel.scss  control-panel.spec.ts  control-panel.ts
frontend/pendulum-cp-ui/src/app/models/: graph-config.ts  layout.ts  models.spec.ts  simulation-params.ts  start-params.ts  system-status.ts  telemetry-data.ts
frontend/pendulum-cp-ui/src/app/services/: api.service.spec.ts  api.service.ts  csv-export.service.spec.ts  csv-export.service.ts
packaging/: build.bat  build.sh  pendulum.spec
packaging/windows/: installer.iss
simulations/matlab/: drawpend.m  new.m  pendcart.m  pendulum_step.m  polepace_cartpend.m
simulations/simulink/: IP.m  IP.mat  IP_SwingUp_Design.slx  IP_SwingUp_Design.slx.original  Init_Setup_LQRArd.m  animation3d1.m  nonlinear_model_IP.slx
(+8 files in other folders)
